--- a/fe/src/assets/global-styles.css
+++ b/fe/src/assets/global-styles.css
@@ -94,6 +94,14 @@
   padding: 0;
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
+  user-select: none;
+  -webkit-user-drag: none;
+}
+
+input,
+textarea {
+  user-select: text;
+  -webkit-user-drag: auto;
 }
 
 body {
